--- a/index.html
+++ b/index.html
@@ -75,39 +75,61 @@
             <img src="ProgramKasir.png" class="w-full h-[235px] object-fill mb-4"/>
             <h3 class="text-white text-xl font-bold">PROGRAM KASIR</h3>
             <p class="text-[#C4C4C4] text-sm mb-4">This Cashier Program is made with the Netbeans IDE using the java language, in this program which contains the basics about CRUD on the cash register system.</p>
-            <button onclick="window.open('https://drive.google.com/file/d/17ovSlz-01Y9IzeJOZ7y9-RuwZkrxnnfR/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
+            <button onclick="window.open('https://drive.google.com/file/d/17ovSlz-01Y9IzeJOZ7y9-RuwZkrxnnfR/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
+            <div>
+                <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
+            </div>
+            <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirJava', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300">Click Here to Visit</button>
         </div>
         <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
             <img src="ManajemenMusik.png" class="w-full h-[235px] object-fill mb-4"/>
             <h3 class="text-white text-xl font-bold">PROGRAM MANAJEMEN MUSIK</h3>
             <p class="text-[#C4C4C4] text-sm mb-4">This music library program was created with the Netbeans IDE using the java language, in this program which contains how to manage the music library using stacks and queues.</p>
-            <button onclick="window.open('https://drive.google.com/file/d/1KhZJ1YBgdLuQXrTXZJdOJaDkXlypNlse/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
+            <button onclick="window.open('https://drive.google.com/file/d/1KhZJ1YBgdLuQXrTXZJdOJaDkXlypNlse/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
+            <div>
+                <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
+            </div>
+            <button onclick="window.open('https://github.com/TaufiqTri08/ProgramManajemenMusicJava', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300">Click Here to Visit</button>
         </div>
         <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
             <img src="ProgramVb.png" class="w-full h-[235px] object-fill mb-4"/>
             <h3 class="text-white text-xl font-bold">PROGRAM APLIKASI DESKTOP KASIR</h3>
             <p class="text-[#C4C4C4] text-sm mb-4">This desktop cashier application program was created using the Visual Studio IDE with the Visual Basic language, this program contains a system at the cash register.</p>
-            <button onclick="window.open('https://drive.google.com/file/d/1J_aim4yNHrugAQXIH_ybnFWCh8h9Tnc3/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
+            <button onclick="window.open('https://drive.google.com/file/d/1J_aim4yNHrugAQXIH_ybnFWCh8h9Tnc3/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
+            <div>
+                <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
+            </div>
+            <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirVBnet', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300">Click Here to Visit</button>
         </div>
         
         <!-- Second Row (3 more projects) -->
-        <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
-            <img src="GameRap.png" class="w-full h-[235px] object-fill mb-4"/>
-            <h3 class="text-white text-xl font-bold">GAME RAPTOR PUKUL HEWAN</h3>
-            <p class="text-[#C4C4C4] text-sm mb-4">This pop up animal game program is made using Raptor, which is a basic application used for flowcharts with logic that can be controlled so that it can become a program.</p>
-            <button onclick="window.open('https://drive.google.com/file/d/1gbRB6iwhhQRZf3yuhmE6xE5-ScGg106H/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
-        </div>
+        
         <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
             <img src="IdereMobile.png" class="w-full h-[235px] object-fill mb-4"/>
             <h3 class="text-white text-xl font-bold">APLIKASI MOBILE IDERE</h3>
             <p class="text-[#C4C4C4] text-sm mb-4">This application program was created using Android Studio with the java language and sqlite storage, this mobile application contains the submission of innovator funding to investors.</p>
-            <button onclick="window.open('https://drive.google.com/file/d/1gRNnNmRKyCSX_8-Dqj2OkccKBPBeFJm8/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
+            <button onclick="window.open('https://drive.google.com/file/d/1gRNnNmRKyCSX_8-Dqj2OkccKBPBeFJm8/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
+            <div>
+                <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
+            </div>
+            <button onclick="window.open('https://github.com/TaufiqTri08/IdereMobileApps', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300">Click Here to Visit</button>
+        </div>
+        <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
+            <img src="GameRap.png" class="w-full h-[235px] object-fill mb-4"/>
+            <h3 class="text-white text-xl font-bold">GAME RAPTOR PUKUL HEWAN</h3>
+            <p class="text-[#C4C4C4] text-sm mb-4">This pop up animal game program is made using Raptor, which is a basic application used for flowcharts with logic that can be controlled so that it can become a program.</p>
+            <button onclick="window.open('https://drive.google.com/file/d/1gbRB6iwhhQRZf3yuhmE6xE5-ScGg106H/view?usp=drive_link', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
         </div>
         <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
             <img src="IdereWeb.png" class="w-full h-[235px] object-fill mb-4"/>
             <h3 class="text-white text-xl font-bold">WEBSITE IDERE</h3>
             <p class="text-[#C4C4C4] text-sm mb-4">This website program was created using Visual Studio Code with the php language and the Laravel framework, this website contains applications for innovator funding to investors.</p>
-            <button onclick="window.open('https://www.example.com/', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Visit</button>
+            <button onclick="window.open('https://www.example.com/', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300 mt-auto">Click Here to Download</button>
+            <div>
+                <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
+            </div>
+            <button onclick="window.open('https://github.com/TaufiqTri08/IdereWebsite', '_blank')" class="bg-[#FF855F] text-white py-2 px-6 rounded-full hover:bg-[#e0753d] transition duration-300">Click Here to Visit</button>
+        </div>
         </div>
     </div>
 </section>
@@ -165,11 +187,25 @@
                     <h3 class="text-white text-2xl font-bold">Competition</h3>
                     <span class="text-[#8491A0] text-sm">INDONERIS 2024</span>
                     <p class="text-[#C4C4C4] text-sm mt-4">3rd Runner-up UI/UX Design</p>
+                    <button onclick="window.open('https://drive.google.com/file/d/1VJZe_YnULuuNHxI9l8LHzXYF3Y3_TBYE/view?usp=drive_link', '_blank')"  class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
                 </div>
                 <div class="mb-12">
                     <h3 class="text-white text-2xl font-bold">Competition</h3>
                     <span class="text-[#8491A0] text-sm">UINIC 6.0 2024</span>
-                    <p class="text-[#C4C4C4] text-sm mt-4">Best Favorite Project UI/UX Design</p>
+                    <p class="text-[#C4C4C4] text-sm mt-4">CAT Boys | Best Favorite Project UI/UX Design</p>
+                    <button onclick="window.open('https://drive.google.com/drive/folders/1VQ6va9IenksjktW5QcYPV7hzMUsxaDck?usp=drive_link', '_blank')"  class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
+                </div>
+                <div class="mb-12">
+                    <h3 class="text-white text-2xl font-bold">Academy Class</h3>
+                    <span class="text-[#8491A0] text-sm">DICODING</span>
+                    <p class="text-[#C4C4C4] text-sm mt-4">Learn Google Cloud Basics</p>
+                    <button onclick="window.open('https://drive.google.com/file/d/11XmFyoreSfiuiNNG7MsdC1rXhevBtqPD/view?usp=sharing', '_blank')"  class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
+                </div>
+                <div class="mb-12">
+                    <h3 class="text-white text-2xl font-bold">Academy Class</h3>
+                    <span class="text-[#8491A0] text-sm">DICODING</span>
+                    <p class="text-[#C4C4C4] text-sm mt-4">Learn Cloud Basics and Gen AI on AWS</p>
+                    <button onclick="window.open('https://drive.google.com/file/d/1aQnksaxvgvWdG2Y9bwltLGUtSZ4f5VHR/view?usp=drive_link', '_blank')"  class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
                 </div>
             </div>
         </section>
