--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Web Taufiq</title>
-     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: system-ui;
-        }
-        .card {
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        }
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-        }
-        .navbar-link:hover {
-            color: #FF855F;
-            transition: color 0.3s ease-in-out;
-        }
-        .fade-in {
-            animation: fadeIn 1s ease-in-out forwards;
-        }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-    </style>
-</head>
-<body class="bg-[#161513] text-white">
-    <div class="flex flex-col">
-        <!-- Navbar -->
-        <nav class="bg-[#222222] shadow-md">
-            <div class="max-w-screen-xl mx-auto py-4 flex justify-center space-x-12">
-                <a href="#home" class="text-white text-lg font-bold navbar-link">Home</a>
-                <a href="#projects" class="text-white text-lg font-bold navbar-link">Projects</a>
-                <a href="#experience" class="text-white text-lg font-bold navbar-link">Experience</a>
-                <a href="#contact" class="text-white text-lg font-bold navbar-link">Contact</a>
-            </div>
-        </nav>
 
-        <!-- Home Section -->
-        <section id="home" class="flex flex-col items-center py-20">
-            <img src="fotoprofil.png" class="w-[251px] h-[223px] object-contain"/>
-            <h1 class="text-[55px] font-bold text-center mb-4">Hi,I am Taufiq Tri Winardi<br/></h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portofolio Web Taufiq</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: system-ui;
+    }
+
+    .card {
+      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar-link:hover {
+      color: #FF855F;
+      transition: color 0.3s ease-in-out;
+    }
+
+    .fade-in {
+      animation: fadeIn 1s ease-in-out forwards;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    html {
+      scroll-padding-top: 80px;
+    }
+  </style>
+</head>
+
+<body class="bg-[#161513] text-white">
+  <div class="flex flex-col">
+    <!-- Navbar -->
+    <nav class="bg-[#222222] shadow-md">
+      <div class="max-w-screen-xl mx-auto py-4 px-4 flex flex-wrap justify-center gap-4 sm:gap-12">
+        <a href="#home" class="text-white text-base sm:text-lg font-bold navbar-link">Home</a>
+        <a href="#projects" class="text-white text-base sm:text-lg font-bold navbar-link">Projects</a>
+        <a href="#experience" class="text-white text-base sm:text-lg font-bold navbar-link">Experience</a>
+        <a href="#contact" class="text-white text-base sm:text-lg font-bold navbar-link">Contact</a>
+      </div>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home" class="flex flex-col items-center py-20 px-4 sm:px-8 text-center">
+      <img src="fotoprofil.png" class="w-52 h-52 sm:w-[251px] sm:h-[223px] object-contain mb-6" />
+      <h1 class="text-4xl sm:text-5xl lg:text-[55px] font-bold mb-4">
+        Hi, I am Taufiq Tri Winardi<br/></h1>
             <p class="text-[#C4C4C4] text-lg text-center max-w-3xl mx-auto mb-8">
                 I am an active student of the Information Systems Study Program, Faculty of Computer Science, UPN “Veteran” East Java who has an interest in information technology and creative design. Have an interest in UI/UX Design as well as software development and data analyst. Experienced in organizational activities. Have teamwork skills, good communication, and a high spirit of learning. Ready to contribute with organizational skills, initiative, and interest to keep growing in a professional environment.
             </p>
-            <button onclick="window.open('https://drive.google.com/file/d/15AvrKX10wxQj_sijZhWSrD47VvJm9RIJ/view?usp=drive_link', '_blank')" class="bg-transparent text-white border-2 border-white py-4 px-8 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">
+            <button onclick="window.open('https://drive.google.com/file/d/1s8JBfOiWZa1Kq_cVJ72lnfot4uCO0sYG/view?usp=drive_link', '_blank')" class="bg-transparent text-white border-2 border-white py-4 px-8 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">
                 Download CV
             </button>
 
