--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <h3 class="text-white text-2xl font-bold">Academy Class</h3>
                     <span class="text-[#8491A0] text-sm">DICODING</span>
                     <p class="text-[#C4C4C4] text-sm mt-4">Learn Google Cloud Basics</p>
-                    <button onclick="window.open('https://drive.google.com/file/d/11XmFyoreSfiuiNNG7MsdC1rXhevBtqPD/view?usp=sharing', '_blank')" class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
+                    <button onclick="window.open('https://www.dicoding.com/certificates/NVP7QVEW4ZR0', '_blank')" class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
                 </div>
                 
                 <!-- Fourth Experience Item (right side) -->
@@ -249,7 +249,14 @@
                     <h3 class="text-white text-2xl font-bold">Academy Class</h3>
                     <span class="text-[#8491A0] text-sm">DICODING</span>
                     <p class="text-[#C4C4C4] text-sm mt-4">Learn Cloud Basics and Gen AI on AWS</p>
-                    <button onclick="window.open('https://drive.google.com/file/d/1aQnksaxvgvWdG2Y9bwltLGUtSZ4f5VHR/view?usp=drive_link', '_blank')" class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
+                    <button onclick="window.open('https://www.dicoding.com/certificates/JMZVDR08OZN9', '_blank')" class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
+                </div>
+
+                <div class="mb-12">
+                    <h3 class="text-white text-2xl font-bold">Academy Class</h3>
+                    <span class="text-[#8491A0] text-sm">DICODING</span>
+                    <p class="text-[#C4C4C4] text-sm mt-4">Learn Basic Project Management</p>
+                    <button onclick="window.open('https://www.dicoding.com/certificates/JMZVVQ5O3ZN9', '_blank')" class="bg-transparent text-white border-1 border-white py-1 px-1 rounded-full text-lg font-bold hover:bg-white hover:text-black transition duration-300">Click Here to Visit</button>
                 </div>
             </div>
         </section>
