--- a/index.html
+++ b/index.html
@@ -111,12 +111,9 @@
             <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
                 <img src="ProgramKasir.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">PROGRAM KASIR</h3>
-                <p class="text-[#C4C4C4] text-sm mb-4">This Cashier Program is made with the Netbeans IDE using the java language, in this program which contains the basics about CRUD on the cash register system.</p>
-                <button onclick="window.open('https://drive.google.com/file/d/17ovSlz-01Y9IzeJOZ7y9-RuwZkrxnnfR/view?usp=drive_link', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
-                    <div>
-                        <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
-                    </div>
-                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirJava', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300">Click Here to Visit</button>
+                <p class="text-[#C4C4C4] text-sm mb-9">This Cashier Program is made with the Netbeans IDE using the java language, in this program which contains the basics about CRUD on the cash register system.</p>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
+                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirJava', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Visit</button>
             </div>
 
             <!-- Card 2 -->
@@ -124,11 +121,8 @@
                 <img src="ManajemenMusik.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">PROGRAM MANAJEMEN MUSIK</h3>
                 <p class="text-[#C4C4C4] text-sm mb-4">This music library program was created with the Netbeans IDE using the java language, in this program which contains how to manage the music library using stacks and queues.</p>
-                <button onclick="window.open('https://drive.google.com/file/d/1KhZJ1YBgdLuQXrTXZJdOJaDkXlypNlse/view?usp=drive_link', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
-                    <div>
-                        <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
-                    </div>
-                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramManajemenMusicJava', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300">Click Here to Visit</button>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
+                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramManajemenMusicJava', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Visit</button>
             </div>
 
             <!-- Card 3 -->
@@ -136,11 +130,8 @@
                 <img src="ProgramVb.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">PROGRAM APLIKASI DESKTOP KASIR</h3>
                 <p class="text-[#C4C4C4] text-sm mb-4">This desktop cashier application program was created using the Visual Studio IDE with the Visual Basic language, this program contains a system at the cash register.</p>
-                <button onclick="window.open('https://drive.google.com/file/d/1J_aim4yNHrugAQXIH_ybnFWCh8h9Tnc3/view?usp=drive_link', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
-                    <div>
-                        <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
-                    </div>
-                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirVBnet', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300">Click Here to Visit</button>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
+                <button onclick="window.open('https://github.com/TaufiqTri08/ProgramKasirVBnet', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Visit</button>
             </div>
 
             <!-- Card 4 -->
@@ -148,18 +139,16 @@
                 <img src="IdereMobile.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">APLIKASI MOBILE IDERE</h3>
                 <p class="text-[#C4C4C4] text-sm mb-4">This application program was created using Android Studio with the java language and sqlite storage, this mobile application contains the submission of innovator funding to investors.</p>
-                <button onclick="window.open('https://drive.google.com/file/d/1gRNnNmRKyCSX_8-Dqj2OkccKBPBeFJm8/view?usp=drive_link', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
-                    <div>
-                        <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
-                    </div>
-                <button onclick="window.open('https://github.com/TaufiqTri08/IdereMobileApps', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300">Click Here to Visit</button>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
+                <button onclick="window.open('https://github.com/TaufiqTri08/IdereMobileApps', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Visit</button>
             </div>
 
             <!-- Card 5 -->
             <div class="bg-[#3A3A3A] p-6 rounded-xl flex flex-col">
                 <img src="GameRap.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">GAME RAPTOR PUKUL HEWAN</h3>
-                <p class="text-[#C4C4C4] text-sm mb-4">This pop up animal game program is made using Raptor, which is a basic application used for flowcharts with logic that can be controlled so that it can become a program.</p>
+                <p class="text-[#C4C4C4] text-sm mb-9">This pop up animal game program is made using Raptor, which is a basic application used for flowcharts with logic that can be controlled so that it can become a program.</p>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
                 <button onclick="window.open('https://drive.google.com/file/d/1gbRB6iwhhQRZf3yuhmE6xE5-ScGg106H/view?usp=drive_link', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
             </div>
 
@@ -168,11 +157,8 @@
                 <img src="IdereWeb.png" class="w-full h-[235px] object-fill mb-4" />
                 <h3 class="text-white text-xl font-bold">WEBSITE IDERE</h3>
                 <p class="text-[#C4C4C4] text-sm mb-4">This website program was created using Visual Studio Code with the php language and the Laravel framework, this website contains applications for innovator funding to investors.</p>
-                <button onclick="window.open('https://drive.google.com/drive/folders/1YXNIWxGrHQ3zIZ0XMoj8PO3GnyQYUpi3?usp=sharing', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Download</button>
-                    <div>
-                        <p class="text-[#C4C4C4] text-sm mt-2">Or visit the GitHub repository for more details:</p>
-                    </div>
-                <button onclick="window.open('https://github.com/TaufiqTri08/IdereWebsite', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300">Click Here to Visit</button>
+                <p class="text-[#C4C4C4] text-sm mt-14">Visit the GitHub repository for more details:</p>
+                <button onclick="window.open('https://github.com/TaufiqTri08/IdereWebsite', '_blank')" class="bg-orange-500 text-white py-2 px-6 rounded-full hover:bg-orange-600 transition duration-300 mt-auto">Click Here to Visit</button>
             </div>
         </div>
         </section>
@@ -190,7 +176,7 @@
                 <img src="Teachlink.png" class="w-full h-[235px] object-fill mb-4"/>
                 <h3 class="text-white text-xl font-bold">Teach link Point</h3>
                 <p class="text-[#C4C4C4] text-sm mb-4"></p>
-                <button onclick="window.open('https://www.figma.com/proto/Neq3VCL2QA85sJmA598uP4/Workspace-C.A.T-Boys?node-id=2004-19976&t=SdddDU2Bsp8MX8YH-1', '_blank')" class="bg-[#6600FF] text-white py-2 px-6 rounded-full hover:bg-[#4b00b3] transition duration-300">Click Here to Visit</button>
+                <button onclick="window.open('https://www.figma.com/proto/Neq3VCL2QA85sJmA598uP4/Workspace-C.A.T-Boys?node-id=2004-19976&t=SdddDU2Bsp8MX8YH-1', '_blank')" class="bg-[#6600FF] text-white py-2 px-6 rounded-full hover:bg-[#4b00b3] transition duration-300 mt">Click Here to Visit</button>
             </div>
 
             <!-- Card 2 -->
@@ -300,42 +286,55 @@
 
 
 
-       <!-- Contact Section -->
-<section id="contact" class="bg-[#191919] py-16">
-    <h2 class="text-white text-3xl font-bold text-center mb-6">Contact</h2>
-    <p class="text-[#C4C4C4] text-center mb-8">
-        Reach out to me for potential collaborations or just to say hello. I'm always open to new opportunities!
-    </p>
-    
-    <div class="flex justify-center space-x-8 mb-8">
-        <!-- Email Button -->
-        <a href="mailto:taufiqtriwinardi25@gmail.com" class="flex items-center space-x-2 bg-[#333333] text-white py-2 px-8 rounded-full hover:bg-[#1a1a1a] transition duration-300">
-            <img src="google_mail_gmail_logo_icon_159346.png" alt="Email" class="w-6 h-6"/>
-            <span>Email Me</span>
-        </a>
+
+                <!-- Contact Section -->
+        <section id="contact" class="bg-[#0d0d0d] border-t border-gray-700 py-10 md:py-12">
+        <div class="max-w-screen-md mx-auto px-4">
+            <h2 class="text-white text-3xl font-bold text-center mb-4">Contact</h2>
+            <p class="text-[#C4C4C4] text-center mb-6">
+            Reach out to me for potential collaborations or just to say hello. I'm always open to new opportunities!
+            </p>
+
+            <!-- Social Buttons Grid 2x2 -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 place-items-center">
+            <!-- Email -->
+            <a href="mailto:taufiqtriwinardi25@gmail.com"
+                class="flex items-center space-x-2 bg-[#333333] text-white py-2 px-5 rounded-full hover:bg-[#1a1a1a] transition duration-300 justify-center w-full max-w-[220px] text-sm">
+                <img src="google_mail_gmail_logo_icon_159346.png" alt="Email" class="w-5 h-5" />
+                <span>Email Me</span>
+            </a>
+
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/in/taufiq-tri-winardi-42961428a/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank"
+                class="flex items-center space-x-2 bg-[#333] text-white py-2 px-5 rounded-full hover:bg-[#1d1d1d] transition duration-300 justify-center w-full max-w-[220px] text-sm">
+                <img src="linkedinlogo.png" alt="LinkedIn" class="w-5 h-5" />
+                <span>LinkedIn</span>
+            </a>
+
+            <!-- GitHub -->
+            <a href="https://github.com/TaufiqTri08" target="_blank"
+                class="flex items-center space-x-2 bg-[#333] text-white py-2 px-5 rounded-full hover:bg-[#1d1d1d] transition duration-300 justify-center w-full max-w-[220px] text-sm">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" class="w-5 h-5" />
+                <span>GitHub</span>
+            </a>
+
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/taufiq_winardi_" target="_blank"
+                class="flex items-center space-x-2 bg-[#333] text-white py-2 px-5 rounded-full hover:bg-[#1d1d1d] transition duration-300 justify-center w-full max-w-[220px] text-sm">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" class="w-5 h-5" />
+                <span>Instagram</span>
+            </a>
+            </div>
+
+            <p class="text-center text-gray-500 text-xs mt-6">
+            &copy; 2025 Taufiq Tri Winardi. All rights reserved.
+            </p>
+        </div>
+        </section>
 
 
-        <!-- LinkedIn Button -->
-        <a href="https://www.linkedin.com/in/taufiq-tri-winardi-42961428a/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="flex items-center space-x-2 bg-[#0077B5] text-white py-2 px-8 rounded-full hover:bg-[#005a87] transition duration-300">
-            <img src="linkedin-logo_icon-icons.com_72681.png" alt="LinkedIn" class="w-6 h-6"/>
-            <span>LinkedIn</span>
-        </a>
 
-        <!-- GitHub Button -->
-        <a href="https://github.com/TaufiqTri08" target="_blank" class="flex items-center space-x-2 bg-[#333] text-white py-2 px-8 rounded-full hover:bg-[#1d1d1d] transition duration-300">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" class="w-6 h-6"/>
-            <span>GitHub</span>
-        </a>
-    </div>
-
-    <div class="flex justify-center">
-        <!-- Instagram Button -->
-        <a href="https://www.instagram.com/taufiq_winardi_" target="_blank" class="flex items-center space-x-2 bg-[#C13584] text-white py-2 px-8 rounded-full hover:bg-[#9b2d62] transition duration-300">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" class="w-6 h-6"/>
-            <span>Instagram</span>
-        </a>
-    </div>
-</section>
 
 
     </div>
